--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -8,7 +8,10 @@
     </style> 
   </head>
   <body id="generic" class="">
-    <p>polls are available.</p>
+    <p>比較するよ</p>
+    <form>
+        
+    </form>
     <li>{{ ans }}</li>
   </body>
 </html>
