--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -9,8 +9,10 @@
   </head>
   <body id="generic" class="">
     <p>比較するよ</p>
-    <form>
-        
+    <form action="/manval" method="post">
+        <input type="text" name="manval" id="manval"
+         value="" />
+        <input type="submit" value="送信" />
     </form>
     <li>{{ ans }}</li>
   </body>
