--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -10,9 +10,9 @@
   </head>
   <body id="generic" class="">
     <p>比較するよ</p>
-    <form action="/manval" method="post">
+    <form enctype="multipart/form-data" action="/manval" method="post">
         {% csrf_token %}
-        <input type="text" name="manval" id="manval"
+        <input type="image" name="manval" id="manval"
          value="" />
         <input type="submit" value="送信" />
     </form>
